Try oras push for hhfab

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -74,6 +74,12 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
+      - name: Oras push for hhfab
+        id: oras
+        run: |
+          docker save -o toolbox.tar ghcr.io/githedgehog/toolbox:latest
+          oras push ghcr.io/githedgehog/fabricator/toolbox:latest toolbox.tar
+
       - name: Setup tmate session for debug
         if: ${{ failure() && github.event_name == 'workflow_dispatch' && inputs.debug_enabled }}
         uses: mxschmitt/action-tmate@v3
