--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -77,6 +77,7 @@ jobs:
       - name: Oras push for hhfab
         id: oras
         run: |
+          docker pull ghcr.io/githedgehog/toolbox:latest
           docker save -o toolbox.tar ghcr.io/githedgehog/toolbox:latest
           oras push ghcr.io/githedgehog/fabricator/toolbox:latest toolbox.tar
 
