--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,7 +25,7 @@ env:
 
 jobs:
   dockers:
-    runs-on: ubuntu-latest
+    runs-on: lab
 
     permissions:
       contents: read
@@ -94,7 +94,7 @@ jobs:
       - dockers
     if: ${{ always() }}
 
-    runs-on: ubuntu-latest
+    runs-on: lab
 
     steps:
       - run: |
