--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,7 +24,7 @@ env:
   ORG: githedgehog
 
 jobs:
-  dockers:
+  test:
     runs-on: lab
 
     permissions:
@@ -33,40 +33,54 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Log in to the Container registry
-        uses: docker/login-action@v2
+        uses: actions/checkout@v4
         with:
-          registry: ${{ env.REGISTRY }}
+          fetch-depth: 0
+
+      - name: Setup Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: stable
+          cache: true
+
+      - name: Login to ghcr.io
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v4
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.ORG }}/toolbox
-          tags: |
-            type=ref,event=pr
-            type=raw,value=latest,enable={{is_default_branch}}
+      - name: Lint and generate code
+        run: |
+          just --timestamp lint-gha gen _lint
 
-      - name: Build and push (on master only) Docker image
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          file: Dockerfile
-          platforms: linux/amd64
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+      - name: Some Go lint
+        run: |
+          just --timestamp _lint
 
-      # - name: Oras push for hhfab
-      #   id: oras
-      #   run: |
-      #     docker pull ghcr.io/githedgehog/toolbox:latest
-      #     docker save -o toolbox.tar ghcr.io/githedgehog/toolbox:latest
-      #     oras push ghcr.io/githedgehog/fabricator/toolbox:latest toolbox.tar
+      - name: More Go lint
+        uses: golangci/golangci-lint-action@v6
+        with:
+          # keep in sync with hack/tools.just
+          version: v1.64.8
+
+      - name: Build and run tests
+        run: |
+          just --timestamp build test
+
+      - name: Go mod tidy
+        run: |
+          go mod tidy
+          go mod vendor
+
+      # Don't remove it! We shouldn't allow CI to pass if there are any changes not committed after running gen/lint/test
+      - name: Fail on dirty
+        run: |
+          if ! git status --short || ! git diff --quiet; then
+            git --no-pager diff -- . :^vendor
+            echo "::error::Working directory is dirty. Please run 'just gen lint && go mod tidy && go mod vendor' and commit the changes."
+            exit 1
+          fi
 
       - name: Setup tmate session for debug
         if: ${{ failure() && github.event_name == 'workflow_dispatch' && inputs.debug_enabled }}
@@ -75,19 +89,31 @@ jobs:
         with:
           limit-access-to-actor: true
 
-  dockers-results:
-    name: Docker Build/Publish Results
-    needs:
-      - dockers
-    if: ${{ always() }}
-
+  publish:
     runs-on: lab
+    if: startsWith(github.event.ref, 'refs/tags/v') && github.event_name == 'push'
+    needs:
+      - test
 
     steps:
-      - run: |
-          result="${{ needs.dockers.result }}"
-          if [[ $result == "success" || $result == "skipped" ]]; then
-            exit 0
-          else
-            exit 1
-          fi
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Setup Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: stable
+          cache: true
+
+      - name: Login to ghcr.io
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Publish Images, Helm charts and Bins on release
+        run: |
+          just --timestamp oci_repo=ghcr.io push
