--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,6 +8,9 @@ on:
   push:
     branches:
       - master
+      - release/*
+    tags:
+      - "v*"
   pull_request:
   schedule:
     - cron: "0 10 * * *" # ~2am PST
