chore(lint): exclude vendor from golangci-lint
Signed-off-by: Sergei Lukianov <me@slukjanov.name>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -144,3 +144,7 @@ linters-settings:
       #
       - name: bool-literal-in-expr
       - name: constant-logical-expr
+
+issues:
+  exclude-files:
+    - vendor
