--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -66,6 +66,7 @@ jobs:
         with:
           # keep in sync with hack/tools.just
           version: v1.64.8
+          install-mode: goinstall
 
       - name: Build and run tests
         run: |
