fix(ci): add permissions to publish packages
Signed-off-by: Sergei Lukianov <me@slukjanov.name>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -99,6 +99,10 @@ jobs:
     needs:
       - test
 
+    permissions:
+      contents: read
+      packages: write
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v5
